Fixs z-index between info bar and directory menu

--- a/src/scss/components/directory-menu/_directory-menu.scss
+++ b/src/scss/components/directory-menu/_directory-menu.scss
@@ -5,7 +5,7 @@
 
 #directory-menu
 {
-	z-index: 200;
+	z-index: 700;
 	overflow-y:hidden; 
   @include transition(height .5s);
   @include box-shadow(4px 0 2px rgba(0, 0, 0, 0.2), -1px 0 2px rgba(0, 0, 0, 0.2));
