--- a/src/scss/components/element-info-bar/_info-bar.scss
+++ b/src/scss/components/element-info-bar/_info-bar.scss
@@ -6,7 +6,7 @@
 #element-info-bar
 {
     height:0px;    
-    z-index: 10;
+    z-index: 600;
     position: relative;   
     
     will-change:height;      
